--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -179,7 +179,7 @@
         <h1 class="custom-ss-student-thoughts-heading text-center">OUR <span>EVENTS</span></h1>
     </div>
     <!-- 
-    <div class="col-sm-12" style="color: #19578A;">
+    <div class="col-sm-12" style="color: #33099e;">
         <h1>Event Calendar</h1>
         <br />
         <span>
@@ -508,7 +508,7 @@
                     <div class="row" style="width:100%;">
                         <div class="col-sm-4">
                             <div class="round progress-radial progress-45 setsize2"
-                                style="color : black !important;  height: 150px; width: 150px;box-shadow: 1px 5px 21px #19578a; ">
+                                style="color : black !important;  height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e; ">
                                 <div class="overlay setsize2 " style="height: 120px;">
                                     <p class="whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@studentCount']}}</p>
@@ -521,7 +521,7 @@
                         <div class="col-sm-4">
 
                             <div class="round progress-radial progress-55 setsize2 "
-                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #19578a;">
+                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e;">
                                 <div class="overlay setsize2  " style="height: 120px;">
                                     <p class=" whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@engineerCount']}}</p>
@@ -534,7 +534,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="round progress-radial progress-65 setsize2 "
-                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #19578a;">
+                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e;">
                                 <div class="overlay setsize2 " style="height: 120px;">
                                     <p class="whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@stuvationCount']}}</p>
@@ -552,7 +552,7 @@
                     <div class="row" style="width:100%;">
                         <div class="col-sm-4">
                             <div class="round progress-radial progress-45 setsize2"
-                                style="color : black !important;  height: 150px; width: 150px; box-shadow: 1px 5px 21px #19578a;">
+                                style="color : black !important;  height: 150px; width: 150px; box-shadow: 1px 5px 21px #33099e;">
                                 <div class="overlay setsize2 " style="height: 120px;">
                                     <p class="whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@techMeetCount']}}</p>
@@ -565,7 +565,7 @@
                         <div class="col-sm-4">
 
                             <div class="round progress-radial progress-55 setsize2 "
-                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #19578a;">
+                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e;">
                                 <div class="overlay setsize2  " style="height: 120px;">
                                     <p class=" whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@techTalkCount']}}</p>
@@ -578,7 +578,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="round progress-radial progress-65 setsize2 "
-                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #19578a;">
+                                style="color : black !important; height: 150px; width: 150px;box-shadow: 1px 5px 21px #33099e;">
                                 <div class="overlay setsize2 " style="height: 120px;">
                                     <p class="whiteBoldText counter-count" style="color : black !important;">
                                         {{getHomePageCounterValues['@stuvationCount']}}</p>
@@ -615,9 +615,9 @@
 
 
 
-<!-- <div class="row" style="background-color: #19578A">
+<!-- <div class="row" style="background-color: #33099e">
     <div class="col-sm-12" style="padding-left: 0;padding-right: 0; ">
-        <section class="progress" style="background-color: #19578A !important;     margin-left: 15em; margin-bottom: 0; margin-top:2em; ">
+        <section class="progress" style="background-color: #33099e !important;     margin-left: 15em; margin-bottom: 0; margin-top:2em; ">
 
             <div class="progress-radial progress-45 setsize">
                 <div class="overlay setsize">
