--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -6,7 +6,7 @@
     color: white;
     line-height: 111px;
     text-align: center;
-    background: #19578A;
+    background: #33099e;
   }
 .hrnew{
   border-top: 2px solid green !important;
