--- a/src/app/tech-article/tech-article.component.css
+++ b/src/app/tech-article/tech-article.component.css
@@ -4,7 +4,7 @@
 }
 
 .card-header{
-    background-color: #07567F;
+    background-color: #33099e;
     color: white;
 }
 
@@ -16,7 +16,7 @@
 
 .cardSubHeading{
     font-size: 1.5rem; 
-    color: #07567F; 
+    color: #33099e; 
     text-decoration: underline;
 }
 
@@ -26,18 +26,21 @@
 
 .buttonarticle{
     height: 30%;
-    background-color: #19578A;
+    background-color: #33099e;
     color: white;
     font-weight: bold;
 }
 .commentbutton{
     background-color: black; color: white !important;
+    margin-left: -8% !important;
 }
 .veiwbutton{
     background-color: #B3B3B3; color: black !important;
+    margin-left: -8% !important;
 }
 .buybutton{
     background-color: #FE9404; color: white !important;
+    margin-left: -8% !important;
 }
 .createarticle1{
     max-width : 70% !important;
@@ -67,6 +70,7 @@ padding: 8px;
 border: none;
 cursor: pointer;
 margin-top: 45px;
+color: white !important;
 height: 41px;
     padding: 0 11px;
     font-size: 66px;
@@ -89,7 +93,7 @@ color: #3e0aa5;
     margin-top: 11px;
 }
 .radio-btns{
-background: #19578a;
+background: #33099e;
 width: 20%;
 padding: 8px;
 border-radius: 48px;
@@ -109,14 +113,16 @@ cursor: pointer;
     border: 1px solid #3e0aa5;
     margin-bottom: 15px;
     box-shadow: 5px 9px 13px -4px rgba(0, 0, 0, .3) !important;
-    background-color: #19578a59;
+    background-color: #33099e59;
     /* margin-left: 0%; */
 }
 @media only screen and (max-width: 768px) {
 .buttonarticle{
     height: 18%;
-    background: -webkit-gradient(linear,left top,right top,color-stop(0,#ff2c65),color-stop(100%,#ff5d3b));
-    color: white;
+    background: rgba(51,9,158,1);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(51,9,158,1)), color-stop(47%, rgba(51,9,158,1)), color-stop(100%, rgba(192,39,230,1)));
+    background: linear-gradient(to right, rgba(51,9,158,1) 0%, rgba(51,9,158,1) 47%, rgba(192,39,230,1) 100%);
+ color: white;
     border: 3px solid darksalmon;
     border-radius: 15px;
     font-weight: bold;
