--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -226,9 +226,9 @@ top: 120px;
 }
 /*Hover state for top level links*/
 .main-menu li:hover .main-header {
-  /* background: #19578A !important; */
+  /* background: #33099e !important; */
   /* color: white !important; */
-  border-bottom: 2px solid #19578A;
+  border-bottom: 2px solid #33099e;
   /* border-radius: 25px; */
 }
 /*Style for dropdown links*/
@@ -240,8 +240,8 @@ li:hover ul a {
 }
 /*Hover state for dropdown links*/
 li:hover ul a:hover {
-  /* background: #19578A; */
-  /* border-bottom: 2px solid #19578A; */
+  /* background: #33099e; */
+  /* border-bottom: 2px solid #33099e; */
   color: #fff;
 }
 /*Hide dropdown links until they are needed*/
@@ -268,7 +268,7 @@ ul li a:hover + .hidden, .hidden:hover {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-decoration: none;
   color: #fff;
-  background: #19578A;
+  background: #33099e;
   text-align: center;
   padding: 10px 0;
   display: none;
@@ -302,7 +302,7 @@ ul li a:hover + .hidden, .hidden:hover {
   margin-bottom: -10px !important;
 }
 .sub-drop li{
-  border-bottom: 2px solid #19578A;
+  border-bottom: 2px solid #33099e;
 }
 
 .showInMobile{
@@ -328,7 +328,7 @@ ul li a:hover + .hidden, .hidden:hover {
     line-height: 38px !important;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     background-color: white!important;
-    color: #19578a !important;
+    color: #33099e !important;
     border-radius: 25px;
     text-decoration: none !important;
     font-weight: 800 !important;
@@ -336,7 +336,7 @@ ul li a:hover + .hidden, .hidden:hover {
 
 .login-btn li:hover a{
   background-color: white!important;
-  color: #19578a !important; 
+  color: #33099e !important; 
   border-radius: 25px;
 }
 .custom-ss-footer {
@@ -677,7 +677,7 @@ ul.main-menu li{
     line-height: 38px !important;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     background-color: white!important;
-    color: #19578a !important;
+    color: #33099e !important;
     border-radius: 25px;
     text-decoration: none !important;
     font-weight: 800 !important;
@@ -685,7 +685,7 @@ ul.main-menu li{
 
 .login-btn li:hover a{
   background-color: white!important;
-  color: #19578a !important; 
+  color: #33099e !important; 
   border-radius: 25px;
 }
 
