--- a/src/app/engship-request/engship-request.component.html
+++ b/src/app/engship-request/engship-request.component.html
@@ -7,9 +7,10 @@
     </ol>
     <div class="carousel-inner">
       <div *ngFor="let imageObj of sliderContent; let i = index;" class="carousel-item" [ngClass]="{'active' : i==0 }">
-        <img class="d-block w-100 sliderImageStyle" src="../assets/images/{{imageObj.imagelink}}?auto=yes&bg=666&fg=444" alt="{{imageObj.sliderid}} slide">
+        <img class="d-block w-100 sliderImageStyle" src="../assets/images/{{imageObj.imagelink}}?auto=yes&bg=666&fg=444"
+          alt="{{imageObj.sliderid}} slide">
         <div class="carousel-caption d-none d-md-block">
-          
+
         </div>
       </div>
 
@@ -31,121 +32,129 @@
 </div>
 <div id="techArticleFilterDiv" class="row" style="padding: 1em;">
   <div class="col-6">
-    
+
     <div class="row">
-        <div class="col-12" style="margin-top: 1em;">
-          <div class="card" style="width: 100%;" *ngFor="let engshipMentorObj of engshipMentorRequestdetails ; let i = index; "
-            [ngClass]="{'techarticleRow1' : i%2==0 }">
-            <div class="card-body">
-      
-                <div style="float:right">
-                    <h4>
-                      Engship Type : <u>{{engshipMentorObj.engshipType | uppercase}}</u>
-                    </h4>
-                  </div>
-          <br/>
-          <br/>
-          <br/>
-                  
-                  <b>Technology</b> : {{engshipMentorObj.technologyname}}
-                  <br/>
-                  <b>Sub Technology</b> : {{engshipMentorObj.subtechname}}
-                  <br/>
-                  <b>Can spend time</b> : {{engshipMentorObj.timeSpend}} : {{engshipMentorObj.numberOfHours}} Hours
-                  <br/>
-                  <span *ngIf="engshipMentorObj.membershipChargeFlag!='N'"><b>Membership Charge</b> : {{engshipMentorObj.membershipCharge}}</span>
-                  <br/>
-                  <b>Can Travel</b> : <span *ngIf="engshipMentorObj.willingToTravelFlag=='Y'">Yes</span>
-                  <span *ngIf="engshipMentorObj.willingToTravelFlag=='N'">No</span>
-                  <br/>
-                  <br/>
-                  <b>Requesting Mentee Name</b> : {{engshipMentorObj.originatorname}}
-                  <br/>
-                  <b>Requesting Mentee Email</b> : {{engshipMentorObj.originatoremail}}
-                  <br/>
-                  <b>Requesting Mentee Contact Number</b> : {{engshipMentorObj.originatorcontactnumber}}
-                  <br/>
-                  
-          
-          
-                  <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right;">
-                    <li class="nav-item">
-                      <button class="nav-link btn btn-light" style="background-color: #FE9404; color: white !important;" data-toggle="modal" data-target="#showViewDetailsPopupModal"
-                        (click)="showViewDetailsPopup(engshipMentorObj)">View Details</button>
-                    </li>
-          
-                    <li class="nav-item">
-                      <button class="nav-link btn btn-light" style="background-color: black; color: white !important;" 
-                        (click)="selectMentorPopup(engshipMentorObj)" *ngIf="engshipMentorObj.createdBy!=getLoggedInUserObject()['userid']">Select as Mentor</button>
-                    </li>
-                  </ul>
+      <div class="col-12" style="margin-top: 1em;">
+        <div class="card" style="width: 100%;"
+          *ngFor="let engshipMentorObj of engshipMentorRequestdetails ; let i = index; "
+          [ngClass]="{'techarticleRow1' : i%2==0 }">
+          <div class="card-body">
+
+            <div style="float:right">
+              <h4>
+                Engship Type : <u>{{engshipMentorObj.engshipType | uppercase}}</u>
+              </h4>
             </div>
+            <br />
+            <br />
+            <br />
+
+            <b>Technology</b> : {{engshipMentorObj.technologyname}}
+            <br />
+            <b>Sub Technology</b> : {{engshipMentorObj.subtechname}}
+            <br />
+            <b>Can spend time</b> : {{engshipMentorObj.timeSpend}} : {{engshipMentorObj.numberOfHours}} Hours
+            <br />
+            <span *ngIf="engshipMentorObj.membershipChargeFlag!='N'"><b>Membership Charge</b> :
+              {{engshipMentorObj.membershipCharge}}</span>
+            <br />
+            <b>Can Travel</b> : <span *ngIf="engshipMentorObj.willingToTravelFlag=='Y'">Yes</span>
+            <span *ngIf="engshipMentorObj.willingToTravelFlag=='N'">No</span>
+            <br />
+            <br />
+            <b>Requesting Mentee Name</b> : {{engshipMentorObj.originatorname}}
+            <br />
+            <b>Requesting Mentee Email</b> : {{engshipMentorObj.originatoremail}}
+            <br />
+            <b>Requesting Mentee Contact Number</b> : {{engshipMentorObj.originatorcontactnumber}}
+            <br />
+
+
+
+            <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right;">
+              <li class="nav-item">
+                <button class="nav-link btn btn-light" style="background-color: #FE9404; color: white !important;"
+                  data-toggle="modal" data-target="#showViewDetailsPopupModal"
+                  (click)="showViewDetailsPopup(engshipMentorObj)">View Details</button>
+              </li>
+
+              <li class="nav-item">
+                <button class="nav-link btn btn-light" style="background-color: black; color: white !important;"
+                  (click)="selectMentorPopup(engshipMentorObj)"
+                  *ngIf="engshipMentorObj.createdBy!=getLoggedInUserObject()['userid']">Select as Mentor</button>
+              </li>
+            </ul>
           </div>
-      
         </div>
+
       </div>
+    </div>
 
   </div>
   <div class="col-6">
-      
-  
-      <div class="row">
-          <div class="col-12" style="margin-top: 1em;">
-            <div class="card" style="width: 100%;" *ngFor="let engshipMentorObj of engshipMenteeRequestdetails ; let i = index; "
-              [ngClass]="{'techarticleRow1' : i%2==0 }">
-              <div class="card-body">
-        
-                <div style="float:right">
-                  <h4>
-                    Engship Type : <u>{{engshipMentorObj.engshipType | uppercase}}</u>
-                  </h4>
-                </div>
-        <br/>
-        <br/>
-        <br/>
-                
-                <b>Technology</b> : {{engshipMentorObj.technologyname}}
-                <br/>
-                <b>Sub Technology</b> : {{engshipMentorObj.subtechname}}
-                <br/>
-                <b>Can spend time</b> : {{engshipMentorObj.timeSpend}} : {{engshipMentorObj.numberOfHours}} Hours
-                <br/>
-                <span *ngIf="engshipMentorObj.membershipChargeFlag!='N'"><b>Membership Charge</b> : {{engshipMentorObj.membershipCharge}}</span>
-                <br/>
-                <b>Can Travel</b> : <span *ngIf="engshipMentorObj.willingToTravelFlag=='Y'">Yes</span>
-                <span *ngIf="engshipMentorObj.willingToTravelFlag=='N'">No</span>
-                <br/>
-                <br/>
-                <b>Requesting Mentor Name</b> : {{engshipMentorObj.originatorname}}
-                <br/>
-                <b>Requesting Mentor Email</b> : {{engshipMentorObj.originatoremail}}
-                <br/>
-                <b>Requesting Mentor Contact Number</b> : {{engshipMentorObj.originatorcontactnumber}}
-                <br/>
-                
-        
-        
-                <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right;">
-                  <li class="nav-item">
-                    <button class="nav-link btn btn-light" style="background-color: #FE9404; color: white !important;" data-toggle="modal" data-target="#showViewDetailsPopupModal"
-                      (click)="showViewDetailsPopup(engshipMentorObj)">View Details</button>
-                  </li>
-        
-                  <li class="nav-item">
-                    <button class="nav-link btn btn-light" style="background-color: black; color: white !important;" 
-                      (click)="selectMenteePopup(engshipMentorObj)" *ngIf="engshipMentorObj.createdBy!=getLoggedInUserObject()['userid']">Select as Mentee</button>
-                  </li>
-                </ul>
-              </div>
+
+
+    <div class="row">
+      <div class="col-12" style="margin-top: 1em;">
+        <div class="card" style="width: 100%;"
+          *ngFor="let engshipMentorObj of engshipMenteeRequestdetails ; let i = index; "
+          [ngClass]="{'techarticleRow1' : i%2==0 }">
+          <div class="card-body">
+
+            <div style="float:right">
+              <h4>
+                Engship Type : <u>{{engshipMentorObj.engshipType | uppercase}}</u>
+              </h4>
             </div>
-        
+            <br />
+            <br />
+            <br />
+
+            <b>Technology</b> : {{engshipMentorObj.technologyname}}
+            <br />
+            <b>Sub Technology</b> : {{engshipMentorObj.subtechname}}
+            <br />
+            <b>Can spend time</b> : {{engshipMentorObj.timeSpend}} : {{engshipMentorObj.numberOfHours}} Hours
+            <br />
+            <span *ngIf="engshipMentorObj.membershipChargeFlag!='N'"><b>Membership Charge</b> :
+              {{engshipMentorObj.membershipCharge}}</span>
+            <br />
+            <b>Can Travel</b> : <span *ngIf="engshipMentorObj.willingToTravelFlag=='Y'">Yes</span>
+            <span *ngIf="engshipMentorObj.willingToTravelFlag=='N'">No</span>
+            <br />
+            <br />
+            <b>Requesting Mentor Name</b> : {{engshipMentorObj.originatorname}}
+            <br />
+            <b>Requesting Mentor Email</b> : {{engshipMentorObj.originatoremail}}
+            <br />
+            <b>Requesting Mentor Contact Number</b> : {{engshipMentorObj.originatorcontactnumber}}
+            <br />
+
+
+
+            <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right;">
+              <li class="nav-item">
+                <button class="nav-link btn btn-light" style="background-color: #FE9404; color: white !important;"
+                  data-toggle="modal" data-target="#showViewDetailsPopupModal"
+                  (click)="showViewDetailsPopup(engshipMentorObj)">View Details</button>
+              </li>
+
+              <li class="nav-item">
+                <button class="nav-link btn btn-light" style="background-color: black; color: white !important;"
+                  (click)="selectMenteePopup(engshipMentorObj)"
+                  *ngIf="engshipMentorObj.createdBy!=getLoggedInUserObject()['userid']">Select as Mentee</button>
+              </li>
+            </ul>
           </div>
         </div>
+
+      </div>
     </div>
+  </div>
 </div>
 
 
-<br/>
+<br />
 
 
 <div id="showViewDetailsPopupModal" class="modal fade" role="dialog" *ngIf="selectedEngship!=undefined">
@@ -153,11 +162,12 @@
 
     <!-- Modal content-->
     <div class="modal-content">
-      <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+      <div class="modal-header" style="background-color: #33099e; text-align: center; align-items: center;">
         <span style="text-align: center; color: white; width: 100%;">
           <h4>Details</h4>
         </span>
-        <button style="float: right; color: white;" type="button" class="close" data-dismiss="modal" id="closeViewDetailsPopupModal">&times;</button>
+        <button style="float: right; color: white;" type="button" class="close" data-dismiss="modal"
+          id="closeViewDetailsPopupModal">&times;</button>
       </div>
       <div class="modal-body">
         <div style="float:right">
@@ -165,29 +175,31 @@
             Engship Type : <u>{{selectedEngship.engshipType | uppercase}}</u>
           </h4>
         </div>
-<br/>
-<br/>
-<br/>
+        <br />
+        <br />
+        <br />
         <b>Mentee Name</b> : {{selectedEngship.originatorname}}
-        <br/>
+        <br />
         <b>Mentee Email</b> : {{selectedEngship.originatoremail}}
-        <br/>
+        <br />
         <b>Mentee Contact Number</b> : {{selectedEngship.originatorcontactnumber}}
-        <br/>
+        <br />
         <b>Technology</b> : {{selectedEngship.technologyname}}
-        <br/>
+        <br />
         <b>Sub Technology</b> : {{selectedEngship.subtechname}}
-        <br/>
+        <br />
         <b>Can spend time</b> : {{selectedEngship.timeSpend}} : {{selectedEngship.numberOfHours}} Hours
-        <br/>
-        <span *ngIf="selectedEngship.membershipChargeFlag!='N'"><b>Membership Charge</b> : {{selectedEngship.membershipCharge}}</span>
-        <br/>
+        <br />
+        <span *ngIf="selectedEngship.membershipChargeFlag!='N'"><b>Membership Charge</b> :
+          {{selectedEngship.membershipCharge}}</span>
+        <br />
         <b>Can Travel</b> : <span *ngIf="selectedEngship.willingToTravelFlag=='Y'">Yes</span>
         <span *ngIf="selectedEngship.willingToTravelFlag=='N'">No</span>
         <ul *ngIf="!checkLoginStatus()" class="nav nav-pills" style="float: right;">
           <li class="nav-item">
-            <button class="nav-link btn btn-light" style="background-color: black; color: white !important;" 
-              (click)="selectMenteePopup(selectedEngship)" *ngIf="selectedEngship.createdBy!=getLoggedInUserObject()['userid']">Select as Mentee</button>
+            <button class="nav-link btn btn-light" style="background-color: black; color: white !important;"
+              (click)="selectMenteePopup(selectedEngship)"
+              *ngIf="selectedEngship.createdBy!=getLoggedInUserObject()['userid']">Select as Mentee</button>
           </li>
         </ul>
       </div>
