--- a/src/app/tech-bank/tech-bank.component.css
+++ b/src/app/tech-bank/tech-bank.component.css
@@ -4,7 +4,7 @@
 }
 
 .card-header{
-    background-color: #07567F;
+    background-color: #33099e;
     color: white;
 }
 
@@ -16,7 +16,7 @@
 
 .cardSubHeading{
     font-size: 1.5rem; 
-    color: #07567F; 
+    color: #33099e; 
    
 }
 
@@ -26,6 +26,54 @@
 .text1{
     margin: 0.4em;
 }
+
+.tech-bank-filters h2{
+    color: #3e0aa5;
+        margin-top: 11px;
+    }
+
+    .filter-divs
+{
+    margin-top: 80px;
+}
+
+.buttonarticle{
+    margin: auto;
+    display: block;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    margin-top: 45px;
+    color: white !important;
+    height: 41px;
+        padding: 0 11px;
+        font-size: 66px;
+        font-size: 17px;
+        margin-top: 19px;
+        border-radius: 33px;
+        color: #ffff;
+        background: rgba(51,9,158,1);
+        background: -webkit-gradient(left top, right top, color-stop(0%, rgba(51,9,158,1)), color-stop(47%, rgba(51,9,158,1)), color-stop(100%, rgba(192,39,230,1)));
+        background: linear-gradient(to right, rgba(51,9,158,1) 0%, rgba(51,9,158,1) 47%, rgba(192,39,230,1) 100%);
+    }
+
+    .radio-btns{
+        background: #33099e;
+        width: 20%;
+        padding: 8px;
+        border-radius: 48px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        cursor: pointer;
+        }
+
+        .fa-check{
+            position: absolute;
+            left: 17px;
+            top: 4px;
+            color: white;
+        }
+
 @media only screen and (max-width: 768px) {
     .createbank{
         max-width : 100% !important;
